# Varablizer

./: .gitignore  CMakeLists.txt  README.md  documentation.md  example.vbin  features.vz  main.cpp  main.vz
src/compile/: Lexer.cpp  Lexer.h  ast.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  emitter.h  error.h  parser.cpp  parser.h  source_location.h  symbol_table.h  token.h  type_resolver.h
src/compile/lexer/: Sentence.cpp
src/execute/: assembler.h  assembly.h  loader.h  opcodes.h  opcodes_config.h  typed_stack.h  validator.h  vtypes.h
src/execute/opcodes/: bitwise.h  call.h  (+9 more)
sublime-text/Varablizer/: varablizer.sublime-syntax
tests/: 01_variables.vbin  01_variables.vz  02_arithmetic.vbin  02_arithmetic.vz  03_comparisons.vbin  03_comparisons.vz  04_bitwise.vbin  04_bitwise.vz  05_if_else.vbin  05_if_else.vz  06_while.vbin  06_while.vz  07_for.vbin  07_for.vz  08_dowhile.vbin  08_dowhile.vz  09_functions.vbin  09_functions.vz  10_recursion.vbin  10_recursion.vz  11_break_continue.vbin  11_break_continue.vz  12_goto.vbin  12_goto.vz  13_increment.vbin  13_increment.vz  14_compound_assign.vbin  14_compound_assign.vz  15_nested.vbin  15_nested.vz  16_pointers.vbin  16_pointers.vz  17_pointer_arith.vbin  17_pointer_arith.vz  18_null.vbin  18_null.vz  19_malloc_free.vbin  19_malloc_free.vz  20_destructor.vbin  20_destructor.vz  (+6 more)
tools/artisan/: CMakeLists.txt  README.md  main.cpp
tools/artisan/commands/: build_execute.h  command.h  compile.h  execute.h  make_opcode.h
tools/artisan/utils/: opcode_scanner.h
tools/opcode_generator/: CMakeLists.txt  main.cpp
